Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.7.0
-
Fix Version/s: 5.7.1
-
Component/s: Quick: Controls 2
-
Labels:None
-
Environment:WIndows 7 and 10, Linux Mint 17.3, Debian 8.5 and Android 4.1. For android was tested on Sony Xperia ION.
-
Commits:c5617da5fd563e5bf1894a2b0303ae3ae835e20d
Description
Drawer component cant disabled setting dragMargin to 0.
With settings dragMargin to 0 only decrease the range for start dragging the drawer but it cant disabled
Attachments
Issue Links
- is duplicated by
-
QTBUG-56907 Drawer::dragMargin does not work on some Android devices
-
- Closed
-