Drawer: fix dragMargin handling

Change-Id: I7549509aef9a88af7e6a449bae52da273b0253d0
Task-number: QTBUG-54629
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>